--- a/package.json
+++ b/package.json
@@ -10,15 +10,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "rxjs": "~7.5.0",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
+
+    "angular-google-charts": "^2.2.3",
+    "angular-google-tag-manager": "^1.5.0",
+    "aws-amplify": "^4.0.2",
+    "chart.js": "2.9.3",
+    "chartjs-plugin-annotation": "0.5.7",
+    "chartjs-plugin-datalabels": "0.7.0",
+    "logrocket": "^1.3.0",
+    "nanoid": "^3.1.28",
+    "ng2-charts": "^2.4.2",
+    "ngx-perfect-scrollbar": "^10.1.1",
+    "nonce": "^1.0.4",
+    "normalize.css": "^8.0.1",
+
+    "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
